--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,14 @@
         {% endblock %}
     </head>
     <body>
+
+        {# loader #}
+        <div class="d-flex justify-content-center align-items-center" id="loader">
+            <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+
         {# include header #}
         {% include 'partials/header.html.twig' %}
      
@@ -20,6 +28,14 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('js/app') }}
+            
+            {# Loader #}
+            <script>
+                window.addEventListener("load", function(event) {
+                    document.body.removeChild(document.getElementById("loader"))
+                })
+            </script>
+            
             {# flash message management with toastr #}
             {% if (app.session.flashbag.peek('success')|length >0) or (app.session.flashbag.peek('error')|length >0) %}
                 <script>
