work on interests for edit profile

--- a/templates/partials/modals/_modalUpdateAvatar.html.twig
+++ b/templates/partials/modals/_modalUpdateAvatar.html.twig
@@ -13,13 +13,13 @@
             </div>
             <div class="modal-footer modal-avatar">
                 <input type="file" id="uploadFile" accept="image/png, image/jpeg, image/jpg" hidden="hidden"/>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-upload"></i> {{ 'btn.change'|trans }}</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-camera-retro"></i> {{ 'btn.change'|trans }}</button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnDelAvatar"><i class="far fa-trash-alt"></i> {{ 'btn.delete'|trans }}</button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-auto shadow-none" data-dismiss="modal">
-                    <i class="fas fa-times"></i> {{ 'btn.close'|trans }}
+                    <i class="fas fa-check"></i> {{ 'btn.validate'|trans }}
                 </button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" data-dismiss="modal" id="btnCancelAvatar">
-                    <i class="far fa-window-close"></i></i> {{ 'btn.cancel'|trans }}
+                    <i class="fas fa-times"></i> {{ 'btn.cancel'|trans }}
                 </button>
             </div>
         </div>
