add entities for interests and fixtures associated

--- a/assets/css/profile.scss
+++ b/assets/css/profile.scss
@@ -102,3 +102,13 @@ label.label-profile {
   color: white;
 }
 //
+
+.card-header-profile-interest {
+  background-color: #dcdcdc;
+  color: #000000;
+  font-size: 0.9rem;
+}
+
+.label-interest {
+  font-size: 0.9rem;
+}
