--- a/templates/partials/_profileInterests.html.twig
+++ b/templates/partials/_profileInterests.html.twig
@@ -1,66 +1,37 @@
-<div class="card mt-2 card-profile">
-    <div class="card-header text-left">Culture</div>
-    <div class="card-body text-left">
-        <div class="row">
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                <label class="custom-control-label" for="customSwitch1">Literrature</label>
-            </div> 
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                <label class="custom-control-label" for="customSwitch2">Cinéma</label>
-            </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch3">
-                <label class="custom-control-label" for="customSwitch4">Théatre</label>
-            </div>
+{% for typeName in interestType %}
+    <div class="card mt-2 card-profile">
+        <div class="card-header card-header-profile-interest text-left">
+            <i class="{{ typeName.iconType }}"></i>&nbsp;&nbsp;{{ typeName.nameType|trans }}
         </div>
-        <div class="row">
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch5">
-                <label class="custom-control-label" for="customSwitch5">Musique</label>
+        <div class="card-body text-left">
+            <div class="row">
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                    <label class="custom-control-label label-interest" for="customSwitch1">Literrature</label>
+                </div> 
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2">
+                    <label class="custom-control-label label-interest" for="customSwitch2">Cinéma</label>
+                </div>
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch3">
+                    <label class="custom-control-label label-interest" for="customSwitch4">Théatre</label>
+                </div>
             </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch6" checked>
-                <label class="custom-control-label" for="customSwitch6">Concert / Opéra</label>
-            </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch4">
-                <label class="custom-control-label" for="customSwitch4">Art/Histoire</label>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="card mt-2 card-profile">
-    <div class="card-header text-left">Sciences et Business</div>
-    <div class="card-body text-left">
-        <div class="row">
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                <label class="custom-control-label" for="customSwitch1">Literrature</label>
-            </div> 
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                <label class="custom-control-label" for="customSwitch2">Cinéma</label>
-            </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch3">
-                <label class="custom-control-label" for="customSwitch4">Théatre</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch5">
-                <label class="custom-control-label" for="customSwitch5">Musique</label>
-            </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch6" checked>
-                <label class="custom-control-label" for="customSwitch6">Concert / Opéra</label>
-            </div>
-            <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
-                <input type="checkbox" class="custom-control-input" id="customSwitch4">
-                <label class="custom-control-label" for="customSwitch4">Art/Histoire</label>
+            <div class="row">
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch5">
+                    <label class="custom-control-label label-interest" for="customSwitch5">Musique</label>
+                </div>
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch6" checked>
+                    <label class="custom-control-label label-interest" for="customSwitch6">Concert / Opéra</label>
+                </div>
+                <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch4">
+                    <label class="custom-control-label label-interest" for="customSwitch4">Art/Histoire</label>
+                </div>
             </div>
         </div>
     </div>
-</div>
+{% endfor %}
